--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "event_loop.h": "c",
         "assert.h": "c",
         "epoll_dispatcher.h": "c",
-        "channel_map.h": "c"
+        "channel_map.h": "c",
+        "channel.h": "c"
     }
 }
