--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "assert.h": "c",
         "epoll_dispatcher.h": "c",
         "channel_map.h": "c",
-        "channel.h": "c"
+        "channel.h": "c",
+        "tcp_connection.h": "c",
+        "tcp_server.h": "c",
+        "acceptor.h": "c"
     }
 }
